<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <TextView
        android:id="@+id/txtHistorial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2sp"
        android:gravity="end"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TableLayout
        android:layout_width="409dp"
        android:layout_height="450dp"
        android:backgroundTint="#8BC34A"
        android:onClick="escribirNum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.391">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#8BC34A"
                android:onClick="escribirNum"
                android:text="@string/_7"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#8BC34A"
                android:onClick="escribirNum"
                android:text="@string/_8"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#8BC34A"
                android:onClick="escribirNum"
                android:text="@string/_9"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnPow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#CDDC39"
                android:onClick="escribir"
                android:text="@string/pow"
                android:textColor="#786C6C"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#8BC34A"
                android:onClick="escribirNum"
                android:text="@string/_4"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#8BC34A"
                android:onClick="escribirNum"
                android:text="@string/_5"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#8BC34A"
                android:onClick="escribirNum"
                android:text="@string/_6"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnSus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#CDDC39"
                android:onClick="escribir"
                android:text="@string/sus"
                android:textColor="#786C6C"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#8BC34A"
                android:onClick="escribirNum"
                android:text="@string/_1"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#8BC34A"
                android:onClick="escribirNum"
                android:text="@string/_2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#8BC34A"
                android:onClick="escribirNum"
                android:text="@string/_3"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#CDDC39"
                android:onClick="escribir"
                android:text="@string/sum"
                android:textColor="#786C6C"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnBlank1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#8BC34A"
                android:onClick="escribirNum"
                android:text="@string/_0"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnBlank2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#CDDC39"
                android:onClick="escribir"
                android:text="@string/div"
                android:textColor="#786C6C"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:backgroundTint="#FFC107"
                android:onClick="escribirNum"
                android:text="@string/clear"
                android:textColor="#786C6C"
                android:textSize="18sp"
                app:strokeColor="#FF5722" />

            <Button
                android:id="@+id/btnEquals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:backgroundTint="#CDDC39"
                android:onClick="escribir"
                android:text="@string/eq"
                android:textColor="#786C6C"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>